fixed some styling issues that caused a decorator line to overlap with other elements

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -143,7 +143,7 @@ span.comment-date {
 }
 
 .comment-wrapper .form-component {
-    margin-top: -2em;
+    margin-top: -1.5em;
     margin-bottom: 1em;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
